keep going marathon 2

--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -15,7 +15,7 @@
       ctx.lineJoin = 'round';
       ctx.lineCap = 'round';
       ctx.lineWidth = 100;
-      ctx.globalCompositeOperation = 'multiply';
+      //ctx.globalCompositeOperation = 'multiply'; play modes why not?
 
       let isDrawing = false;
       let lastX = 0;
